# Turbox410-610-Performance

./: readme.md
Turbox410-MultiDecoder/: CMakeLists.txt  MultiDecoder.cpp
Turbox410-MultiDecoder/MultPlayer/: BufManager.cpp  BufManagerExtend.cpp  CMakeLists.txt  MultPlayer.cpp  common.cpp  common.h
Turbox410-MultiDecoder/MultPlayer/.deps/: DecMultThread-BufManager.Po  DecMultThread-BufManagerExtend.Po  DecMultThread-MultPlayer.Po  DecMultThread-common.Po  DecMultThread-fb_display.Po  DecMultThread-mult_decoder.Po
Turbox410-MultiDecoder/config/: CMakeLists.txt
Turbox410-MultiDecoder/config/include/: file_ops.h  param_ops.h
Turbox410-MultiDecoder/config/src/: param.cpp
Turbox410-MultiDecoder/include/: BufManager.h  MultPlayer.h  face_detect.h  gio-querymodules
Turbox410-MultiDecoder/res/: config.ini
doc/: Turbox-C610-MultiDecoderApp_User Guide.docx  Turbox610&410-Performance-demo.docx
